Added CS footer, changed theme to simple.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.min.css">
-		<link rel="stylesheet" href="css/theme/default.css" id="theme">
+		<link rel="stylesheet" href="css/theme/simple.css" id="theme">
 		<link rel="stylesheet" href="css/custom.css" id="theme">
 
 		<!-- For syntax highlighting -->
@@ -34,10 +34,19 @@
 			         data-separator="^---\n"
 			         data-vertical="^-"
 			         data-notes="^Note:"
-			         data-charset="utf-8">
+			         data-charset="utf-8"
+                     data-background="#ffffff">
 			</section>
 			</div>
+            <footer>
+                <img src="container-solutions-logo.png" alt="Container Solutions" />
+                <p>
+                    Author's name<br />
+                    <a href="https://twitter.com/containersoluti">@containersoluti</a>
+                </p>
+            </footer>
 		</div>
+
 
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.min.js"></script>
@@ -47,7 +56,7 @@
 			// Full list of configuration options available here:
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
-				controls: true,
+				controls: false,
 				progress: true,
 				history: true,
 				center: true,
