Fixed the presentation directory name.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-                <section data-markdown="md/slides.md"
+                <section data-markdown="pres/slides.md"
                          data-separator="^---\n"
                          data-vertical="^-"
                          data-notes="^Note:"
