Support lists in md format, without revealjs thinkinng it is a vertical slide

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="slides">
                 <section data-markdown="pres/slides.md"
                          data-separator="^---\n"
-                         data-vertical="^-"
+                         data-vertical="^-\n"
                          data-notes="^Note:"
                          data-charset="utf-8"
                          data-background="#ffffff">
