--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 		<script src="pres/config.js"></script>
 		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.min.js"></script>
+		<script src="js/reveal.js"></script>
         <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 
 		<script>
