--- a/index.html
+++ b/index.html
@@ -7,24 +7,22 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/simple.css" id="theme">
 		<link rel="stylesheet" href="css/custom.css">
 
-		<!-- For syntax highlighting -->
+        <!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
-        <!-- If the query includes 'print-pdf', use the PDF print sheet -->
+        <!-- Printing and PDF exports -->
         <script>
-            if( window.location.search.match( /print-pdf/gi ) ) {
                 var link = document.createElement( 'link' );
                 link.rel = 'stylesheet';
                 link.type = 'text/css';
-                link.href = 'css/print/pdf.css';
+			    link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
                 document.getElementsByTagName( 'head' )[0].appendChild( link );
-            }
         </script>
 
         <!-- Live reload -->
@@ -41,8 +39,8 @@
 			<div class="slides">
                 <section data-markdown="pres/slides.md"
                          data-separator="^---\n"
-                         data-vertical="^-\n"
-                         data-notes="^Note:"
+                         data-separator-vertical="^-\n"
+                         data-separator-notes="^Note:"
                          data-charset="utf-8"
                          data-background="#ffffff">
                 </section>
@@ -62,34 +60,31 @@
         <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 
 		<script>
-			// Full list of configuration options available here:
+			// Full list of configuration options available at:
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
-				controls: false,
+				controls: config.showControls,
 				progress: true,
 				history: true,
 				center: true,
-
-				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
-
-				// Parallax scrolling
-				// parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
-				// parallaxBackgroundSize: '2100px 900px',
-
-				// Optional libraries used to extend on reveal.js
+				transition: 'slide', // none/fade/slide/convex/concave/zoom
+				// Optional reveal.js plugins
 				dependencies: [
 					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
 					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
 					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-					{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
+					{ src: 'plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: 'plugin/zoom-js/zoom.js', async: true },
+					{ src: 'plugin/notes/notes.js', async: true },
 					{ src: 'plugin/title.js', async: true }
 				]
 			});
 
             $(document).ready(function() {
+                var footer = $('footer');
+                if(!config.showFooter) {
+                    footer.hide();
+                }
                 $('.author').text(config.author);
                 $('.twitter').attr('href','https://twitter.com/' + config.twitter);
                 $('.twitter').text('@' + config.twitter);
@@ -100,7 +95,7 @@
                         .css('top', '770px')
                         .css('position', 'absolute')
                         .css('left', '0px');
-                    $('section[data-markdown]').prepend($('footer'));
+                    $('section[data-markdown]').prepend(footer);
                 }
 
             });
